--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -9,7 +9,7 @@
         <img id='track-image' src='<% cover %>' width="32" height="32" alt="Radio Picto">
     </a>
 </div>
-    <a id="favorite-radio" href="#"></a>
+    <a id="favorite-radio" class='is-not-favorite' href="#"></a>
     <a id="play-btn">
         <i class="icon-play"></i>
     </a>
