--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -20,7 +20,7 @@
     </div>
 
     <div id='slider-container'>
-        <div id='player-title'><% name %> {% trans "By" %} <strong><span id='track-artist'><% artist %></span></strong></div>
+        <div id='player-title'><% name %></div>
         <span class="tooltip"></span>  
         <div id="volume-slider"></div>  
         <span class="volume"></span> 
