--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -39,5 +39,5 @@
     <a href="#" id="love-btn"></a>
 </div>
 <div class="header-social-btn"> 
-    <a href="#" id="shop-btn"></a>
+    <a href="<% buy_link %>" id="shop-btn" target="_blank"></a>
 </div>
