--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -584,6 +584,105 @@ input::-webkit-input-placeholder {
 	-moz-box-shadow:none;
 	-o-box-shadow:none;
 }
+
+/*--- RADIO CELL ---*/
+
+.thumbnails li {
+	margin:0px;
+	padding:0px;
+}
+
+.thumbnail {
+	display:inline-block;
+	float:left;
+	height:209px;
+	width:209px;
+	border-radius:5px;
+	padding:0px;
+	margin:12px;
+	background-image:url('../app/images/radio/radio-album-cover.png');
+	background-repeat:no-repeat;
+	position:relative;
+	border:1px solid #d3d3d3;
+	box-shadow:0px 0px 2px #d3d3d3;
+	overflow:hidden;
+}
+
+
+#caption {
+	position:absolute;
+	bottom:0px;
+	padding:0px;
+	background-image:url('../app/images/radio/radio-caption-bg.png');
+	background-repeat:repeat-x;
+	height:49px;
+	width:208px;
+	border-radius: 0px 0px 5px 5px;
+	border:1px solid black;
+}
+
+#caption h5 {
+	color:white;
+	font-size:14px;
+	text-shadow:1px 0px 1px black;
+	padding: 9px 0px 0px 9px;
+	font-family:arial;
+	font-weight:normal;
+	overflow:hidden;
+}
+
+#caption-content {
+	
+}
+
+#radio-favorites {
+	margin:0px;
+}
+
+#radio-favorites li:first-child {
+	list-style:none;
+	color:white;
+	display:inline-block;
+	padding-left:30px;
+	background-image:url('../app/images/radio/radio-favorite-btn.png');
+	background-repeat:no-repeat;
+	background-position:9px 1px;
+	color:#a7a7a7;
+	font-size:11px;
+}
+
+#radio-favorites li:last-child {
+	list-style:none;
+	color:white;
+	display:inline-block;
+	padding-left:30px;
+	background-image:url('../app/images/radio/radio-playing-btn.png');
+	background-repeat:no-repeat;
+	background-position:9px 1px;
+	color:#a7a7a7;
+	font-size:11px;
+}
+
+#radio-profile {
+	width:32px;
+	height:32px;
+	border-radius:50px;
+	border:2px solid white;
+	position:relative;
+	top:10px;
+	left:10px;
+}
+
+#radio-profile img {
+	position:absolute;
+	border-radius:50px;
+}
+
+#radio-profile span {
+	position:absolute;
+}
+
+
 /**
  * Footer
  */
@@ -823,6 +922,12 @@ input::-webkit-input-placeholder {
 /**
  * Radio page
  */
+
+
+
+/**
+ * Radio page
+/*
 #webapp-radio {
 	margin-top: 24px;
 	background-color: #F5F5F5;
