fade in/out using jquery functions

--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -4,7 +4,7 @@
     <img src='/media/app/images/radio/radio-album-cover.png'/>
     </div>
     
-    <div class='mask hidden'>
+    <div class='mask' style='display:none;'>
     </div>
     
     <div class="profile">
