share button activated

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -33,7 +33,7 @@
 
 
 <div class="header-social-btn" id="first-social-btn">
-    <a href="#" id="share-btn"></a>
+    <a id="share-btn" data-toggle="modal" href="#modal-share"></a>    
 </div>
 <div class="header-social-btn">
     <a href="#" id="love-btn"></a>
