update RadioCell, mask content

--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -5,11 +5,24 @@
     </div>
     
     <div class='mask' style='display:none;'>
+		<div class="radio-icon">
+			<img src="../../../media/app/images/radio/radio-radio-picture.png" width="36" height="36" alt="Radio Radio Picture">
+		</div>
+		<div class="radio-id">
+			<p><span>Par</span> SupadexDJ</p>
+			<p>Meek Mill <span>Dreamchasers 2</span>
+		</div>
+		<div class="tag">
+			Rock
+			<div class="tag-right-side"></div>
+		</div>
     </div>
     
     <div class="profile">
         <img src='<% picture %>' width='32px' height='32px'/>
-        <span class="radio-profile-picture-mask"><img src="/media/app/images/radio/radio-profile-picture-mask.png" width="28" height="28" alt="Radio Profile Picture Mask"></span>
+        <span class="radio-profile-picture-mask">
+			<img src="/media/app/images/radio/radio-profile-picture-mask.png" width="28" height="28" alt="Radio Profile Picture Mask">
+		</span>
     </div>
     <div class='caption'>
         <div class="caption-content">
