--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -725,7 +725,7 @@ input::-webkit-input-placeholder {
     position:absolute;
     top:10px;
     left:10px;
-    z-index:3;
+    z-index:4;
 }
 
 .radio-cell .profile img {
@@ -751,11 +751,65 @@ input::-webkit-input-placeholder {
 	height:209px;
     width:209px;
 	position:absolute;
-	border:2px solid blue;
-	border-radius:2px;
+	border-radius:5px;
 	left:0;
 	top:0;
 	z-index:4;
+}
+
+.radio-cell .radio-icon {
+	position:absolute;
+	top:67px;
+	left:10px;
+}
+
+.radio-cell .radio-id {
+	min-height:80px;
+	margin-left:60px;
+	margin-bottom:20px;
+}
+
+.radio-cell .mask p {
+	color:white;
+	font-size:14px;
+}
+
+.radio-cell .mask p:first-child {
+	margin-bottom:30px;
+	margin-top:20px;
+}
+
+.radio-cell .mask span {
+	color:#b1b1b1;
+	font-size:14px;
+}
+
+.radio-cell .tag {
+	display:inline-block;
+	color:white;
+	margin-left:10px;
+	margin-right:10px;
+	padding-left:6px;
+	font-size:11px;
+	min-height:19px;
+	min-width:20px;
+	background-image:url('../app/images/radio/radio-tag-bg.png');
+	background-repeat:repeat-x;
+	border-radius:3px;
+	position:relative;
+	padding-right:17px;
+	border:1px solid black;
+}
+
+.radio-cell .tag-right-side {
+	background-color:black;
+	height:7px;
+	width:7px;
+	border-radius:5px;
+	position:absolute;
+	right:4px;
+	top:7px;
+	box-shadow:0px -1px 1px #515252 inset;
 }
 
 /**
