--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -274,7 +274,7 @@
 	</div>
 	<div id='submenu-container'></div>
     
-<div class="modal hide" id="modal-share">
+<div class="modal hide fade" id="modal-share">
     <div class="modal-header">
         <button class="close" data-dismiss="modal">×</button>
         <h3>{% trans "Share" %}</h3>
