--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -13,7 +13,7 @@
 			<p>Meek Mill <span>Dreamchasers 2</span>
 		</div>
 		<div class="tag">
-			Rock
+			Hip-Hop
 			<div class="tag-right-side"></div>
 		</div>
     </div>
