added creator name

--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -9,7 +9,9 @@
 			<img src="../../../media/app/images/radio/radio-radio-picture.png" width="36" height="36" alt="Radio Radio Picture">
 		</div>
 		<div class="radio-id">
-			<p><span>Par</span> SupadexDJ</p>
+            <%#creator%>
+			<p><span>{% trans "By" %}</span> <% name %></p>
+            <%/creator%>
 			<p>Meek Mill <span>Dreamchasers 2</span>
 		</div>
 		<div class="tag">
