update radio cell, hover border

--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -3,8 +3,9 @@
     <div class='picture'>
     <img src='<% picture %>' width='210' height='210'/>
     </div>
-    
-    <div class='mask' style='display:none;'>
+	
+	<div class='mask' style='display:none;'>
+		<img class="border" src="../../../media/app/images/radio/radio-hover-border.png" width="217" height="217" alt="Radio Hover Border">
 		<div class="radio-icon">
 			<img src="../../../media/app/images/radio/radio-radio-picture.png" width="36" height="36" alt="Radio Radio Picture">
 		</div>
