--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -771,14 +771,21 @@ input::-webkit-input-placeholder {
 
 .radio-cell .mask {
 	background-color:rgba(0,0,0,0.80);
-	height:207px;
-    width:207px;
+	height:209px;
+    width:209px;
 	position:absolute;
-	border-radius:5px;
+	border-radius:10px;
 	left:0;
 	top:0;
-	z-index:4;
-	border:2px solid blue;
+	z-index:4;	
+}
+
+.border {
+	position:absolute;
+	height:100%;
+	width:100%;
+	top:0;
+	left:0;
 }
 
 .radio-cell .radio-icon {
