--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -6,13 +6,13 @@
     
     <div class='mask' style='display:none;'>
 		<div class="radio-icon">
-			<img src="../../../media/app/images/radio/radio-radio-picture.png" width="36" height="36" alt="Radio Radio Picture">
+			<img src="/media/app/images/radio/radio-radio-picture.png" width="36" height="36" alt="Radio Radio Picture">
 		</div>
 		<div class="radio-id">
             <%#creator%>
 			<p><span>{% trans "By" %}</span> <% name %></p>
             <%/creator%>
-			<p>Meek Mill <span>Dreamchasers 2</span>
+			<p class='current-song'>Meek Mill <span>Dreamchasers 2</span>
 		</div>
 		<div class="tag">
 			Hip-Hop
