added default image for album

--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -5,9 +5,9 @@
     </div>
 	
 	<div class='mask' style='display:none;'>
-		<img class="border" src="../../../media/app/images/radio/radio-hover-border.png" width="217" height="217" alt="Radio Hover Border">
+		<img class="border" src="/media/app/images/radio/radio-hover-border.png" width="217" height="217" alt="Radio Hover Border">
 		<div class="radio-icon">
-			<img src="/media/app/images/radio/radio-radio-picture.png" width="36" height="36" alt="Radio Radio Picture">
+			<img src="/media/images/default_album.jpg" width="36" height="36" alt="Radio Radio Picture">
 		</div>
 		<div class="radio-id">
             <%#creator%>
