target=blank for twitter, removed alert statement

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -284,7 +284,7 @@
         </p>
         <ul>
         <li><a href='#' id='fb_share'>{% trans "Facebook" %}</a></li>
-        <li><a href='#' id='tw_share'>{% trans "Twitter" %}</a></li>
+        <li><a href='#' id='tw_share' target='blank'>{% trans "Twitter" %}</a></li>
         </ul>
     </div>
     <div class="modal-footer">
