--- a/yaapp/templates/yabase/widget.html
+++ b/yaapp/templates/yabase/widget.html
@@ -44,6 +44,9 @@
                <div id='track-picture' class='thumbnail'>
                    <img id='track-image' src="/media/images/default_image.png" width="120px" height="120px" alt='{% trans "Track logo" %}'/>
                    <div class="btn-group">
+                      <a class="btn" id='play'><i class="icon-play"></i></a>
+                      <a class="btn" id='dec'><i class="icon-volume-down"></i></a>
+                      <a class="btn" id='inc' ><i class="icon-volume-up"></i></a>
                    </div>
                       <div class="progress no-ease" id='volume-control' onmousedown="return false">
                         <div class="bar" id='volume-position' style="width: 0%;" onmousedown="return false"></div>
