--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -649,7 +649,7 @@ input::-webkit-input-placeholder {
 .radio-cell {
     display:block;
     float:left;
-    height:217px;
+    height:317px;
     width:217px;
     margin:12px;
     position:relative;
@@ -665,13 +665,14 @@ input::-webkit-input-placeholder {
 	top:4px;
 	left:3px;
 	box-shadow:0px 1px 3px #c7c7c7;
+    border-radius:20px;
 }
 
 .radio-border {
 	position:absolute;
 	left:0px;
 	top:0px;
-	z-index:5;
+	z-index:6;
 }
 
 .radio-cell .caption {
@@ -682,7 +683,7 @@ input::-webkit-input-placeholder {
     background-image:url('../app/images/radio/radio-caption-bg.png');
     background-repeat:repeat-x;
     height:49px;
-    width:209px;
+    width:208px;
     border-radius: 0px 0px 5px 5px;
     border:1px solid black;
     z-index:5;
