--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='radio-cell'>
-	<div class="radio-border" style="display:none">
-		<img src="../../../media/app/images/radio/radio-hover-border.png" width="217" height="217" alt="Radio Hover Border">
+	<div class="radio-border" style='display:none;'>
+		<img src="/media/app/images/radio/radio-hover-border.png" alt="Radio Hover Border">
     </div>
 	<div class="radio-container">	
 		<div class='picture'>
