updated content to fit psd

--- a/yaapp/templates/yabase/app/top/topRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/top/topRadiosPage.mustache
@@ -1,8 +1,7 @@
 {% load i18n %}
 <div id='post-submenu'>&nbsp;</div>
 <div class='span12'>
-    <h1>{% trans "Top" %}</h1>
-    <ul id='results' class='thumbnails'>
+    <ul id='results' class='radio-cells'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
     <div class='cell-pagination' id='pagination'></div>
