wip on style selection

--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -12,15 +12,7 @@
         <div>
             <form>
                 <p id="form">
-                    <select name="music-style" id="">
-                        <option value="#">Genre</option>
-                        <option value="#">Jazz</option>
-                        <option value="#">Rock</option>
-                        <option value="#">Blues</option>
-                        <option value="#">Pop</option>
-                        <option value="#">Country</option>
-                        <option value="#">Rap</option>
-                    </select>
+                    {{ style_form.style }}
                 </p>
             </form>
         </div>
