--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -858,6 +858,40 @@ input::-webkit-input-placeholder {
 	box-shadow:0px -1px 1px #515252 inset;
 }
 
+/*--- BUTTON NEXT ---*/
+
+.btn-breadcrumb {
+	height:41px;
+	width:132px;
+	background-image:url('../app/images/btn-more.png');
+	background-repeat:repeat-x;
+	border:1px solid #cbcdc9;
+	border-radius:7px;
+	text-align:center;
+	box-shadow:1px 1px 1px #e3e3e3;
+	cursor: pointer;
+}
+
+.btn-breadcrumb:hover {
+	height:41px;
+	width:132px;
+	background-image:url('../app/images/btn-more.png');
+	background-repeat:repeat-x;
+	border:1px solid #cbcdc9;
+	border-radius:7px;
+	text-align:center;
+	box-shadow:1px 3px 4px #e3e3e3;
+}
+
+#btn-breadcrumb-text {
+	text-decoration:none;
+	color:#58595c;
+	position:relative;
+	top:12px;
+	text-shadow:1px 1px 1px white;
+	font-size:15px;
+}
+
 /**
  * Footer
  */
