--- a/yaapp/templates/yabase/app/pagination.mustache
+++ b/yaapp/templates/yabase/app/pagination.mustache
@@ -1,3 +1,3 @@
-<div class="breadcrumb">
-<a href="#" class="btn long servernext">Show More</a>
+<div class="btn-breadcrumb">
+	<a href="#" id="btn-breadcrumb-text">Show more</a>
 </div>
