--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -972,6 +972,7 @@ input::-webkit-input-placeholder {
     width: 436px;
     height: 82px;
     margin: 40px 54px 0px 35px;
+	position:relative;
 }
 
 #text-users {
@@ -1009,8 +1010,9 @@ input::-webkit-input-placeholder {
     border-radius:4px;
     text-align:center;
     color:#8d9699;
-    position:relative;
-    bottom:1px;
+    position:absolute;
+    bottom:0px;
+	left:300px;
     
     -webkit-box-shadow:0px 1px 2px #1a1c1d, 0px 1px 1px #4f5252 inset;
     -moz-box-shadow:0px 1px 2px #1a1c1d, 0px 1px 1px #4f5252 inset;
