* style works on selection page * french translations

--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -12,7 +12,7 @@
         <div>
             <form>
                 <p id="form">
-                    {{ style_form.style }}
+                    {{ genre_form.genre }}
                 </p>
             </form>
         </div>
