--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -158,7 +158,7 @@ body {
     margin: 21px 0px 0px 19px;
     border-radius:50%;
     background-image:url('../app/images/play-btn-bg.png');
-    box-shadow: 0px 1px 4px black;
+    box-shadow: 0px 2px 2px #202223;
     position:relative;
     cursor:pointer;
 }
@@ -205,14 +205,15 @@ body {
 #sound-level {
     display:inline-block;
     float:left;
-    width:190px;
-    padding-top:12px;
+    width:188px;
+    padding-top:17px;
     padding-left:20px;
 }
 
 #slider-container {
     float:left;
     width:150px;
+	position:relative;
 }
 
 #volume-slider{  
@@ -222,6 +223,9 @@ body {
     background: url('../app/images/level-bar.png');
     background-repeat:no-repeat;
     border:none;
+	position:absolute;
+	top:20px;
+	left:5px;
 }
 
 #min-level {
@@ -246,7 +250,7 @@ body {
 .header-social-btn {
     float:left;
     display:inline-block;
-    padding: 31px 0px 0px 10px;
+    padding: 38px 0px 0px 10px;
 }
 
 #first-social-btn {
@@ -488,8 +492,28 @@ body {
     padding-left:0px;
 }
 
+#sub-header-container form {
+	float:left;
+	margin:0;
+	position:relative;
+	margin-top:10px;
+}
+
+select {
+	-webkit-appearance:none;
+	-moz-appearance:none;
+	-o-appearance:none;
+	appearance:none;
+}
+
+#radio-style-symbol {
+	position:absolute;
+	left:90px;
+	top:9px;
+}
+
 #form select {
-    display:inline-block;
+    display:block;
     float:left;
     height:32px;
     width:108px;
@@ -497,10 +521,8 @@ body {
     border:1px solid #babfc2;
     margin: 3px 13px 0px 0px;
     font-size:15px;
-}
-
-form {
-    margin:0px;
+	background-image:url('../app/images/radio-style-bg.png');
+	padding: 0px 0px 0px 9px;
 }
 
 #sub-header-separation {
@@ -509,7 +531,7 @@ form {
     background-image: url('../app/images/sub-header-separation.png');
     height:36px;
     width:3px;
-    margin: 5px 13px;
+    margin: 13px 13px;
 }
 
 #create-radio {
@@ -518,7 +540,7 @@ form {
     background-image:url('../app/images/create-radio-btn-bg.png');
     height:30px;
     width:147px;
-    margin: 3px 13px;
+    margin: 13px 13px;
     border: 1px solid #b8bec1;
     border-radius:20px;
     text-align:center;
@@ -539,7 +561,7 @@ form {
     background-image:url('../app/images/create-radio-btn-bg.png');
     height:30px;
     width:147px;
-    margin: 3px 13px;
+    margin: 13	px 13px;
     border: 1px solid #b8bec1;
     border-radius:20px;
     text-align:center;
@@ -556,7 +578,7 @@ form {
     height:32px;
     border:1px solid #b8bec1;
     padding:0px;
-    margin-top:2px;
+    margin-top:10px;
     background-color:#eaeef0;
     border-radius:20px;
     padding-left:13px;
