--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -11,6 +11,8 @@
         </ul>
         <div>
             <form>
+				<div id="radio-style-symbol"><img src="/media/app/images/radio-style-symbol.png" width="6" height="9" alt="Radio Style Symbol">
+				</div>
                 <p id="form">
                     {{ genre_form.genre }}
                 </p>
