template use radio-cells instead of thumbnails class

--- a/yaapp/templates/yabase/app/searchPage.mustache
+++ b/yaapp/templates/yabase/app/searchPage.mustache
@@ -1,5 +1,5 @@
 <div id='post-submenu'>&nbsp;</div>
 <div class='span12'>
-    <ul id='results' class='thumbnails'></ul>
+    <ul id='results' class='radio-cells'></ul>
     <div id='pagination'></div>
 </div>
