--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -16,7 +16,8 @@
 	            <%#creator%>
 				<p><span>{% trans "By" %}</span> <% name %></p>
 	            <%/creator%>
-				<p class='current-song'>Meek Mill<span>Dreamchasers 2</span>
+				<p class='current-song'></p>
+				<p class='current-artist'></p>
 			</div>
 			<div class="tag">
 				<div class="tag-right-side"></div>
