--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -1,8 +1,17 @@
 {% load i18n %}
-   <div id='webapp-user-picture'>
-       <img src="<% picture %>" width="256px" height="256px"/>
+<div class='span12'>
+   <div id='picture'>
+       <img src="<% picture %>" width="300px" height="300px"/>
    </div>
-   <div id='webapp-radio-title'>
-        <h1><% name %></h1>
+   <div id='recent-activity'>
+    <%#history%>
+    <p><% human_date %></p>
+    <p><% message %></p>
+    <%/history%>
+   </div>
+   <div id='infos'>
+     <h2><% name %></h2>
+     <p><% bio_text %></p>
    </div>
    
+</div>
