added link to radio in user history

--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -7,6 +7,7 @@
     <%#history%>
     <p><% human_date %></p>
     <p><% message %></p>
+    <a id='radio-activity' href='/app/radio/<% radio_uuid %>/'><% radio_name %></a> 
     <%/history%>
    </div>
    <div id='infos'>
