tooltip for header

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -375,6 +375,7 @@ body {
     width:34px;
     background-image:url('../app/images/gift-btn.png');
     background-repeat:no-repeat;
+	position:relative;
 }
 
 #gift-btn:hover {
@@ -383,6 +384,35 @@ body {
     width:34px;
     background-image:url('../app/images/hover-gift-btn.png');
     background-repeat:no-repeat;
+	text-decoration:none;
+}
+
+#gift-btn span {
+	display:none;
+}
+
+#gift-btn:hover span {
+	position:absolute;
+	display:block;
+	height:29px;
+	min-width:130px;
+	background-image:url('../app/images/tooltip-bg.png');
+	top:40px;
+	left:-50px;
+	border:1px solid black;
+	box-shadow:0px 1px 0px #999b9c inset;
+	border-radius:6px;
+	color:white;
+	text-shadow:1px 1px 1px black;
+	text-align:center;
+	line-height:30px;
+}
+
+#gift-btn:hover span:after {
+	content:url('../app/images/tooltip-pointer.png');
+	position:absolute;
+	top:-18px;
+	left:58px
 }
 
 #header .brand {
@@ -634,6 +664,15 @@ input::-webkit-input-placeholder {
     -webkit-box-shadow:none;
     -moz-box-shadow:none;
     -o-box-shadow:none;
+}
+
+/*--- LOADER IMAGE ---*/
+
+.loading-mask {
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:50%
 }
 
 /*--- RADIO CELL ---*/
