--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -1,32 +1,26 @@
 {% load i18n %}
-<div class='row' id='user-profile'>
-</div>
-
 <div class='row'>
-<div class='span8'>
-    <div id='webapp-radio'></div>
-    <ul class='thumbnails' id='profile-radios'>
-        <li>
-            <h4>{% trans "Radio" %}</h4>
-            <div id='own-radio' class='radio-cell'>
-            </div>
-        
-        </li>
-        <li>
-            <h4>{% trans "Currently listening to" %}</h4>
-            <div id='current-radio' class='radio-cell'>
-            </div>
-        </li>
-    </ul>
 
-</div>
-</div>
-<div class='row-fluid'>
+  <div class='span12' id='user-profile'>
+    <button class='yabutton-large right' id='all-my-radios'>{% trans 'All my radios' %}</button>
+    <h2>{% trans "My radios" %}</h2>
+    <ul class='radio-cells' id='profile-radios'>
+      <li id='own-radio'>
+      </li>        
+    </ul>  
+  </div>
 
-<div class='span12'>
-    <h2>{% trans "Favorites" %}</h2>
-    <ul id='favorites' class='thumbnails'></ul>
-    <div class='cell-pagination' id='pagination'></div>
-</div>
-</div>
+  <div class='span12' id='favorites-zone'>
+    <button class='yabutton-large right' id='favorites-btn'>{% trans 'All my favorites' %}</button>
+    <h2>{% trans "My favorites" %}</h2>
+    <ul class='radio-cells' id='favorites'>
+    </ul>  
+  </div>
+
+  <div class='span12' id='friends-zone'>
+    <button class='yabutton-large right' id='friends-btn'>{% trans 'All my friends' %}</button>
+    <h2>{% trans "My friends" %}</h2>
+    <ul class='' id='friends'>
+    </ul>  
+  </div>
 </div>
