updated endless pagination
* removed weird breadcrumbs divs and replaced a with button
* new class .pagination
* added beforeFetch event from paginator in order to insert loading.gif before loading data

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -923,6 +923,11 @@ input::-webkit-input-placeholder {
 
 /*--- BUTTON NEXT ---*/
 
+.pagination {
+    margin-left:375px;
+}
+
+
 .btn-breadcrumb {
 	height:41px;
 	width:132px;
