--- a/yaapp/templates/yabase/app/pagination.mustache
+++ b/yaapp/templates/yabase/app/pagination.mustache
@@ -1,3 +1,3 @@
-<div class="btn-breadcrumb">
-	<a href="#" id="btn-breadcrumb-text">Show more</a>
+<div class='pagination'>
+	<button href="#" class='yabutton-large servernext'>Show more</button>
 </div>
