--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1074,7 +1074,7 @@ input::-webkit-input-placeholder {
     display:block;
     height:30px;
     width:113px;
-    background-image:url('/app/images/footer-btn-bg.png');
+    background-image:url('../app/images/footer-btn-bg.png');
     background-repeat:repeat-x;
     border:1px solid #1a1c1d;
     box-shadow:0px 1px 1px #1a1c1d, 0px 1px 1px #4f5252 inset;
