--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -262,7 +262,7 @@
 		                    </a>
 		                </div>
 		                <div class="notification" id="last-social-btn">
-		                    <a href="#" id="gift-btn"><span>Pas de cadeaux</span></a>
+		                    <a href="#" id="gift-btn"><span>{% trans 'No gifts' %}</span></a>
 		                </div>
 	                </div>
                 </div>
