added loading.gif on wall

--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -13,7 +13,9 @@
 <div class='span8'>
     <div id='webapp-wall-input'></div>
     <div>
-    <ul id='wall'></ul>
+    <ul id='wall'>
+    <img class='loading-mask' src='/media/images/loading.gif'/>
+    </ul>
     </div>
     <div id='pagination'></div>
 </div>
