sessionid sent in connection request

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -53,6 +53,7 @@
     <script type="text/javascript" src='/media/js/chosen/chosen.jquery.min.js'></script>
     <script type="text/javascript" src="/media/js/jquery.imgr.min.js"></script>
     <script type="text/javascript" src="/media/jquery-ui-1.8.21.custom/js/jquery-ui-1.8.21.custom.min.js"></script>
+    <script type="text/javascript" src="/media/js/cookies.js"></script>
     
 	<!--[if (gte IE 6)&(lte IE 8)]>
 	  <script type="text/javascript" src="/media/js/selectivizr-min.js"></script>
