--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -315,7 +315,7 @@ body {
     padding: 19px 0px 0px 16px;
 }
 
-.notification {
+.header-notification {
     width:38px;
     height:38px;
     position:relative;
