--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -258,11 +258,11 @@
 		                   {% endif %}
 		                </div>
 		                <div>
-		                    <a id="messages-btn" class="notification" href="{% url webapp_notifications %}">
+		                    <a id="messages-btn" class="header-notification" href="{% url webapp_notifications %}">
 		                        <span class="badge badge-info {% ifequal notification_count 0 %}hidden{% endifequal %}" id="message-position-absolute">{{ notification_count }}</span>
 		                    </a>
 		                </div>
-		                <div class="notification" id="last-social-btn">
+		                <div class="header-notification" id="last-social-btn">
 		                    <a href="#" class="yatooltip" id="gift-btn"><span>{% trans 'No gifts' %}</span></a>
 		                </div>
 	                </div>
